# ubs_test

./: README.md  main.py  pyproject.toml
.cache/41/: cache.db
agents/: agent_factory.py
data_access/: alert_reader.py
market_validators/: market_validator.py
models/: alert_models.py
share_validators/: outstanding_share_validator.py
test/: test.py
ubs_autogen/: README.md  alert_processing_results.csv  app.py  main.py  pyproject.toml  team_config.json  test.py  test1.py
ubs_autogen/json/: team_config.json
utils/: pdf_generator.py
