[project]
name = "ubs-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.5.4",
    "autogen-ext[openai]>=0.5.4",
    "pandas>=2.2.0",
    "playwright>=1.41.0",
    "requests>=2.32.3",
    "supabase>=2.6.0",
]
